landing component added

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,22 @@
-<p>navbar works!</p>
+<div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container d-flex justify-content-between">
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          Qui suis-je
+        </a>
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          Expériences pro.
+        </a>
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          Expériences perso.
+        </a>
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          Compétences
+        </a>
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          Passions
+        </a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
