--- a/src/app/components/me/me.component.html
+++ b/src/app/components/me/me.component.html
@@ -1,1 +1,26 @@
-<p>me works!</p>
+
+
+<div class="container-fluid half-fill greybg">
+    <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-3"></div>
+        <div class="col-2">
+            De retour en France après 4 années passées en Suisse, je suis à la recherche d’un emploi dans les environs de Bordeaux.<br>
+            J’ai eu l’opportunité de travailler en tant qu’architecte logiciel dans mon dernier emploi et, ayant beaucoup apprécié ce travail, j’aimerai continuer dans cette voie.<br>
+            D’un tempérament dynamique, je me montre souvent force de proposition.
+        </div>
+        <div class="col-2">
+            <img src="assets/profil.png" class="profil-pic">
+        </div>
+        <div class="col-2">
+            <b>Nom : </b><br>
+            Bastien CHEVRIAUT <br>
+            <b>Adresse :</b><br>
+            40 Rue poujeau, 33200 Bordeaux <br>
+            <b>Mobile :</b> <br>
+            06 17 57 49 65<br>
+            <b>Mail :</b> <br>
+            bchevriaut@gmail.com<br>
+        </div>
+        <div class="col-3"></div>
+      </div>
+</div>
