--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,18 @@ html, body
 {
     height: 100%;
 }
+.fill { 
+    min-height: 100%;
+    height: 100%;
+}
+.half-fill { 
+    min-height: 50%;
+    height: 50%;
+}
+
+.greybg{
+    background-color:#f3f3f3;
+}
+.bluebg{
+    background-color:#f3f3f3;
+}
