adding professionnal experiences + service

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 
 <app-landing id="landing-profile"></app-landing>
 <app-me id="section-profile"></app-me>
-<app-pro id="section-pro"></app-pro>
+<app-experiences-pro id="section-pro"></app-experiences-pro>
