upgrading professional experience class & start professional experiences implemetation

--- a/src/app/components/pro/experiences-pro/experiences-pro.component.css
+++ b/src/app/components/pro/experiences-pro/experiences-pro.component.css
@@ -4,7 +4,16 @@
 }
 .border {
     border: 1px solid #dee2e6!important;
-    width: 50%;
-    margin-left: 25%;
     margin-bottom: 30px;
 }   
+.half-width{
+    margin-left: 25%;
+    width: 50%;
+}
+img {
+    width:150px;
+}
+
+.right{
+    float:right;
+}
