--- a/src/styles.css
+++ b/src/styles.css
@@ -18,5 +18,6 @@ html, body
     background-color:#f3f3f3;
 }
 .bluebg{
-    background-color:#9BC4CB;
+    background-color:#025c6c;
+    color:white;
 }
