--- a/src/app/components/pro/experiences-pro/experiences-pro.component.html
+++ b/src/app/components/pro/experiences-pro/experiences-pro.component.html
@@ -21,5 +21,8 @@
         </div>
         <div class="col-2">
         </div>
-      </div>
+    </div>
+    <div class="separator">
+        <div class="border half-width"></div>
+    </div>
 </div>
