adding education + refactoring

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,3 +2,4 @@
 <app-landing id="landing-profile"></app-landing>
 <app-me id="section-profile"></app-me>
 <app-experiences-pro id="section-pro"></app-experiences-pro>
+<app-education id="section-education"></app-education>
