--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,28 @@
-<p>education works!</p>
+
+
+
+<div class="container-fluid greybg">
+    <div class="row justify-content-center lign-items-center" *ngFor="let education of educationList">
+        <div class="separator">
+            <div class="border half-width"></div>
+        </div>
+        <div class="col-3">
+        </div>
+        <div class="col-2" >
+            <b>{{education.deliveredBy}}</b><br>
+            <img src={{education.logo}} class="right">
+            {{education.dateStart}}
+            {{education.location}}<br><br>
+        </div>
+        <div class="col-5">
+            
+            <img src={{education.icon}}><h2> <u>{{education.name | uppercase}} </u></h2><br>       
+            <p [innerHTML]="education.desc"> </p>
+        </div>
+        <div class="col-2">
+        </div>
+    </div>
+    <div class="separator">
+        <div class="border half-width"></div>
+    </div>
+</div>
