--- a/src/app/components/pro/experiences-pro/experiences-pro.component.html
+++ b/src/app/components/pro/experiences-pro/experiences-pro.component.html
@@ -1,7 +1,8 @@
 
 
 
-<div class="container-fluid bluebg">
+<div class="container-fluid greybg">
+    <div class="title">Expériences Professionnelles</div>
     <div class="row justify-content-center lign-items-center" *ngFor="let experiencePro of experiencesPro">
         <div class="separator">
             <div class="border half-width"></div>
@@ -22,7 +23,5 @@
         <div class="col-2">
         </div>
     </div>
-    <div class="separator">
-        <div class="border half-width"></div>
-    </div>
+    <div class="last-component"></div>
 </div>
