--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,3 +3,4 @@
 <app-me id="section-profile"></app-me>
 <app-education id="section-education"></app-education>
 <app-experiences-pro id="section-pro"></app-experiences-pro>
+<app-skills id="section-skills"></app-skills>
