--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -20,3 +20,26 @@
 h2{
     margin-bottom:10px;
 }
+.bg-warning{
+    background-color:#ffd34f!important;
+}
+
+.badge-light{
+    color: #212529;
+    background-color: #f8f9fa;
+    height: 55px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 15px;
+}
+.badge{
+    font-size:85%;
+    padding-top: 10px;
+    font-weight: normal;
+}
+.score {
+    margin-top: 5px;
+    font-size:120%;
+    font-weight: 700;
+    color: #025c6c;
+}
