--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -42,7 +42,7 @@
         <div class="col-3">
         </div>
         
-        <div class="col-3">
+        <div class="col-3   ">
         </div>
         <div class="col-4 text-right reversed" >
             
@@ -104,7 +104,7 @@
 
         <div class="col-4 text-right reversed">
             
-            <h2>Autres</h2>
+            <h2>Divers</h2>
             Administration Linux
             <div class="progress">
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -117,17 +117,9 @@
             <div class="progress">
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            Relation Client
-            <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
             Formation
             <div class="progress">
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            Leadership
-            <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             Gestion de projet
             <div class="progress">
@@ -143,7 +135,28 @@
         </div>
     </div>
     
-    <div class="separator">
-        <div class="border half-width"></div>
+    <div class="row justify-content-center lign-items-center" >
+        <div class="col-3">
+        </div>
+
+        <div class="col-7">
+            <h2>Autres</h2>
+            <span class="badge badge-light">Relation Client <div class="score">90/100</div></span>
+            <span class="badge badge-light">Leadership<div class="score">75/100</div></span>
+            <span class="badge badge-light">Guitare<div class="score">65/100</div></span>
+            <span class="badge badge-light">Dota2<div class="score">50/100</div></span>
+            <span class="badge badge-light">Git<div class="score">80/100</div></span>
+            <span class="badge badge-light">Escalade<div class="score">70/100</div></span>
+            <span class="badge badge-light">Rugby<div class="score">70/100</div></span>
+            <span class="badge badge-light">Travail en équipe<div class="score">100/100</div></span>
+            <span class="badge badge-light">Motivation<div class="score">200/100</div></span>
+            <span class="badge badge-light">Piano<div class="score">15/100</div></span>
+        </div>
+
+        <div class="col-2">
+        </div>
     </div>
+    
+
+    <div class="last-component"></div>
 </div>
