adding hobbies structure

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,3 +4,5 @@
 <app-education id="section-education"></app-education>
 <app-experiences-pro id="section-pro"></app-experiences-pro>
 <app-skills id="section-skills"></app-skills>
+
+<app-hobbies id="section-hobbies"></app-hobbies>
