--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,40 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+  
+        <div class="row">
+            
+            <div class="col-4">
+            </div>
+            <div class="col-1">
+                <a href="https://www.linkedin.com/in/bastien-chevriaut-93941134/"><i class="fa fa-linkedin" id="in"> </i></a>
+            </div>
+            <div class="col-1">
+                <a href="https://github.com/xoorus"><i class="fa fa-github" id="git"> </i></a>
+            </div>
+            <div class="col-1">
+                <a href="https://www.flickr.com/photos/140016500@N02/"><i class="fa fa-flickr" id="flickr"> </i></a>
+            </div>
+            <div class="col-1">
+                <i class="fa fa-trello" id="trello"> </i>
+            </div>
+
+            <div class="col-4">
+            </div>
+            
+        </div>
+  
+    </div>
+    <!-- Footer Elements -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">Développé à la main avec
+      <a href="https://www.thespruceeats.com/passion-fruit-salad-dressing-3029635/" target="_blanck"> passion </a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
