--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,9 @@
           Qui suis-je
         </a>
         <a href="#" class="navbar-brand d-flex align-items-center">
+          Diplômes / certifications
+        </a>
+        <a href="#" class="navbar-brand d-flex align-items-center">
           Expériences pro.
         </a>
         <a href="#" class="navbar-brand d-flex align-items-center">
@@ -13,10 +16,7 @@
           Compétences
         </a>
         <a href="#" class="navbar-brand d-flex align-items-center">
-          Passions
+          Hobbies
         </a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </div>
   </div>
