--- a/src/app/components/me/me.component.html
+++ b/src/app/components/me/me.component.html
@@ -1,17 +1,18 @@
 
 
 <div class="container-fluid half-fill greybg">
+    <div class="title">Qui Suis-je ?</div>
     <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-3"></div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-0"></div>
+        <div class="col-lg-3 col-md-12">
             De retour en France après 4 années passées en Suisse, je suis à la recherche d’un emploi dans les environs de Bordeaux.<br>
             J’ai eu l’opportunité de travailler en tant qu’architecte logiciel dans mon dernier emploi et, ayant beaucoup apprécié ce travail, j’aimerai continuer dans cette voie.<br>
             D’un tempérament dynamique, je me montre souvent force de proposition.
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-12 d-flex justify-content-center">
             <img src="assets/profil.png" class="profil-pic">
         </div>
-        <div class="col-2">
+        <div class="col-lg-3 col-md-12 text-md-center text-sm-center justify-content-center">
             <b>Nom : </b><br>
             Bastien CHEVRIAUT <br>
             <b>Adresse :</b><br>
@@ -21,6 +22,9 @@
             <b>Mail :</b> <br>
             bchevriaut@gmail.com<br>
         </div>
-        <div class="col-3"></div>
+        <div class="col-lg-2 col-md-0"></div>
       </div>
+      
+
+    <div class="last-component"></div>
 </div>
