--- a/src/app/components/pro/experiences-pro/experiences-pro.component.html
+++ b/src/app/components/pro/experiences-pro/experiences-pro.component.html
@@ -7,20 +7,20 @@
         <div class="separator">
             <div class="border half-width"></div>
         </div>
-        <div class="col-3">
+        <div class="col-xl-3 col-md-1 col-sm-0">
         </div>
-        <div class="col-2" >
+        <div class="col-xl-2 col-md-3 col-sm-12 text-sm-center  sm-margin-bottom" >
             <b>{{experiencePro.company}}</b><br>
             {{experiencePro.dateStart}} - {{experiencePro.dateEnd}}<br>
             {{experiencePro.location}}<br><br>
             <img src={{experiencePro.countryLogo}}><br>
         </div>
-        <div class="col-5">
-            <h2> <u>{{experiencePro.name | uppercase}} </u></h2><br>       
+        <div class="col-xl-5 col-md-7 col-sm-12">
+            <h2 class="text-sm-center"> <u>{{experiencePro.name | uppercase}} </u></h2><br>       
             <p [innerHTML]="experiencePro.desc"> </p>
             <img src={{experiencePro.logo}} class="right">
         </div>
-        <div class="col-2">
+        <div class="col-xl-2 col-md-1 col-sm-0">
         </div>
     </div>
     <div class="last-component"></div>
