--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,9 @@ html, body
 }
 .fill { 
     min-height: 100%;
-    height: 100%;
 }
 .half-fill { 
     min-height: 50%;
-    height: 50%;
 }
 
 .greybg{
@@ -27,7 +25,7 @@ html, body
     text-transform: uppercase;
     font-size: 35px;
     padding-top: 45px;
-    padding-bottom: 15px;
+    padding-bottom: 45px;
 }
 .last-component{
     padding-bottom:45px;
@@ -38,3 +36,21 @@ html, body
     width: 100%;
     margin-top:30px;
 }
+.col-xs-0, 
+.col-sm-0,
+.col-md-0,
+.col-lg-0 {
+  flex: 0 0 0;
+  max-width: 0;
+  display:none !important;
+}
+
+@media (max-width: 767px) {
+
+    .text-sm-center {
+      text-align: center;
+    } 
+    .sm-margin-bottom{
+        margin-bottom:30px;
+    }
+  }
