--- a/src/app/components/hobbies/hobbies.component.html
+++ b/src/app/components/hobbies/hobbies.component.html
@@ -2,30 +2,32 @@
     <div class="title">Hobbies / Centres d'intérêt</div>
 
     <div class="row">
-        <div class="col-6">
-            <div class="row justify-content-center lign-items-center" *ngFor="let hobby of hobbyListLeft">
-                <div class="col-5">
+        <div class="col-xl-6  col-md-6 col-sm-6">
+            <div class="row justify-content-center lign-items-center sm-margin-bottom" *ngFor="let hobby of hobbyListLeft">
+                <div class="col-xl-5 col-md-1 col-sm-0">
                 </div>
-                <div class="col-1 align-items-center text-center" >
+                <div class="col-xl-1  col-md-2 col-sm-2 align-items-center text-center" >
                     <i class="fa {{hobby.icon}}" aria-hidden="true"> </i>
                 </div>
-                <div class="col-6 align-items-center">
-                    <h4>{{hobby.name}}</h4>    
+                <div class="col-xl-6  col-md-8 col-sm-10 align-items-center">
+                    <h4 class="text-sm-center">{{hobby.name}}</h4>    
                     <p [innerHTML]="hobby.desc"> </p>
                 </div>
             </div>
         </div>
 
-        <div class="col-6">
-            <div class="row justify-content-center lign-items-center" *ngFor="let hobby of hobbyListRight">
-                <div class="col-1">
+        <div class="col-xl-6  col-md-6 col-sm-6">
+            <div class="row justify-content-center lign-items-center sm-margin-bottom" *ngFor="let hobby of hobbyListRight">
+                <div class="col-xl-1  col-md-1 col-sm-0">
                 </div>
-                <div class="col-1 align-items-center text-center" >
+                <div class="col-xl-1   col-md-2 col-sm-2 align-items-center text-center" >
                     <i class="fa {{hobby.icon}}" aria-hidden="true"> </i>
                 </div>
-                <div class="col-9 align-items-center">
-                    <h4>{{hobby.name}}</h4>    
+                <div class="col-xl-9  col-md-8 col-sm-10 align-items-center">
+                    <h4 class="text-sm-center" >{{hobby.name}}</h4>    
                     <p [innerHTML]="hobby.desc"> </p>
+                </div>
+                <div class="col-xl-0 col-md-1 col-sm-0">
                 </div>
             </div>
         </div>
