--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -5,9 +5,9 @@
     </div>
 
     <div class="row justify-content-center lign-items-center" >
-        <div class="col-3">
+        <div class="col-xl-2 col-md-1" >
         </div>
-        <div class="col-3" >
+        <div class="col-xl-4 col-md-5 " >
             
             <h2>Développement Front End</h2>
             Angular
@@ -29,9 +29,9 @@
 
 
         </div>
-        <div class="col-4">
+        <div class="col-xl-4 col-md-5 ">
         </div>
-        <div class="col-2">
+        <div class="col-xl-2 col-md-1">
         </div>
     </div>
 
@@ -39,12 +39,12 @@
     </div>
     
     <div class="row justify-content-center lign-items-center" >
-        <div class="col-3">
+        <div class="col-xl-2 col-md-1" >
         </div>
         
-        <div class="col-3   ">
+        <div class="col-xl-4 col-md-5 ">
         </div>
-        <div class="col-4 text-right reversed" >
+        <div class="col-xl-4 col-md-5 text-right reversed" >
             
             <h2>Développement Back End</h2>
             Java
@@ -66,16 +66,16 @@
 
 
         </div>
-        <div class="col-2">
+        <div class="col-xl-2 col-md-1">
         </div>
     </div>
 
     
     <div class="row justify-content-center lign-items-center" >
-        <div class="col-3">
+        <div class="col-xl-2 col-md-1" >
         </div>
         
-        <div class="col-4">
+        <div class="col-xl-4 col-md-5 ">
             
             <h2>Base de données</h2>
             SQL (MySQL, SQL Server, )
@@ -87,22 +87,22 @@
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
-        <div class="col-3" >
+        <div class="col-xl-4 col-md-5 ">
         </div>
-        <div class="col-2">
+        <div class="col-xl-2 col-md-1">
         </div>
     </div>
 
 
     
     <div class="row justify-content-center lign-items-center" >
-        <div class="col-3">
+        <div class="col-xl-2 col-md-1" >
         </div>
         
-        <div class="col-3" >
+        <div class="col-xl-4 col-md-5 ">
         </div>
 
-        <div class="col-4 text-right reversed">
+        <div class="col-xl-4 col-md-5 text-right reversed">
             
             <h2>Divers</h2>
             Administration Linux
@@ -131,16 +131,16 @@
             </div>
         </div>
 
-        <div class="col-2">
+        <div class="col-xl-4 col-md-5 ">
         </div>
     </div>
     
     <div class="row justify-content-center lign-items-center" >
-        <div class="col-3">
+        <div class="col-xl-3  col-md-2 col-sm-0">
         </div>
 
-        <div class="col-7">
-            <h2>Autres</h2>
+        <div class="col-xl-7  col-md-8 col-sm-12">
+            <h2 class="text-sm-center sm-margin-bottom">Autres</h2>
             <span class="badge badge-light">Relation Client <div class="score">90/100</div></span>
             <span class="badge badge-light">Leadership<div class="score">75/100</div></span>
             <span class="badge badge-light">Guitare<div class="score">65/100</div></span>
@@ -153,7 +153,7 @@
             <span class="badge badge-light">Piano<div class="score">15/100</div></span>
         </div>
 
-        <div class="col-2">
+        <div class="col-xl-2  col-md-2 col-sm-0">
         </div>
     </div>
     
