--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 
-<app-landing id="landing-profile"></app-landing>
-<app-me id="section-profile"></app-me>
-<app-education id="section-education"></app-education>
-<app-experiences-pro id="section-pro"></app-experiences-pro>
-<app-skills id="section-skills"></app-skills>
-
-<app-hobbies id="section-hobbies"></app-hobbies>
+<app-landing id="landing-profile" uniScrollSpy="section-landing"></app-landing>
+<app-me id="section-profile" uniScrollSpy="section-profile"></app-me>
+<app-education id="section-education" uniScrollSpy="section-education"></app-education>
+<app-experiences-pro id="section-pro" uniScrollSpy="section-pro"></app-experiences-pro>
+<app-skills id="section-skills" uniScrollSpy="section-skills"></app-skills>
+<app-hobbies id="section-hobbies" uniScrollSpy="section-hobbies"></app-hobbies>
